# duz-game-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: bot.py
apps/: bot.py  config.py
apps/bot/: handlers.py  utils.py
apps/database/: engine.py  match_up.py  users.py
apps/database/models/: users.py
apps/handlers/: start.py
